# maifscratch-1

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPEN_SOURCE_READINESS.md  README.md  SECURITY.md  SPECIFICATION.md  maif_api.py  mkdocs.yml  pyproject.toml  requirements.txt  run_all_demos.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  deploy-docs.yml  docs.yml  release.yml
benchmarks/: format_comparison_benchmark.py  maif_benchmark_suite.py  test_maif_benchmark_suite.py
demo_workspace/enhanced_lifecycle/: enhanced_rules.json
demo_workspace/governance/: governance_rules.json
demo_workspace/integrated_features/: basic_demo.columnar  basic_demo.events  basic_demo.schema
docs/: AWS_REFERENCE.md  BENCHMARK_SUMMARY.md  INSTALLATION.md  MAIF_FEATURES.md  MAIF_README.md  NOVEL_ALGORITHMS_IMPLEMENTATION.md  PAINLESS_SETUP.md  README.md  SIMPLE_API_GUIDE.md  changelog.md  contributing.md  index.md  package-lock.json  package.json
docs/.vitepress/: config.js
docs/.vitepress/theme/: custom.css  index.js
docs/api/: index.md
docs/api/core/: artifact.md  client.md  encoder-decoder.md
docs/api/privacy/: engine.md
docs/api/security/: access-control.md  crypto.md  index.md
docs/cookbook/: index.md
docs/examples/: distributed.md  financial-agent.md  hello-world.md  index.md  langgraph-rag.md  privacy-agent.md  privacy-demo.md  streaming.md
docs/guide/: acid.md  agent-development.md  agent-lifecycle.md  architecture.md  blocks.md  concepts.md  distributed.md  getting-started.md  installation.md  monitoring.md  multimodal.md  performance.md  privacy.md  quick-start.md  security-model.md  semantic.md  streaming.md
docs/guide/integrations/: crewai.md  index.md  langchain.md
examples/: README.md
examples/advanced/: README.md  advanced_features_demo.py  agent_state_restoration_demo.py  cross_backend_demo.py  enhanced_lifecycle_demo.py  full_integration_example.py  hybrid_architecture_demo.py  integrated_features_demo.py  lifecycle_management_demo.py  maif_agent_demo.py  multi_agent_consortium_demo.py  novel_algorithms_demo.py  versioning_demo.py  video_demo.py
examples/basic/: README.md  basic_usage.py  secure_maif_demo.py  simple_api_demo.py
examples/crewai/: env.example  maif_utils.py  test_all_features.py
examples/integrations/: verify_crewai_setup.py
examples/integrations/crewai_governance_demo/: README.md  __init__.py  crew_runner.py  demo_app.py  main.py  memory_demo.py  provenance_inspector.py  report_generator.py  security_verifier.py  tamper_demo.py
examples/integrations/langgraph_governance_demo/: README.md  __init__.py  access_control_demo.py  conversation_agent.py  demo_app.py  main.py  provenance_inspector.py  report_generator.py  security_verifier.py  tamper_demo.py
examples/langgraph/: .gitignore  README.md  RUN_ME_FIRST.sh  __init__.py  create_kb_enhanced.py  demo_enhanced.py  demo_hybrid.py  enhanced_fact_check.py  env.example  graph_enhanced.py  graph_hybrid.py  maif_utils.py  requirements.txt  requirements_enhanced.txt  state.py  test_all_features.py  vector_db.py  web_search_agent.py
examples/langgraph/nodes/: __init__.py  cite.py  fact_check_enhanced.py  init_session.py  retrieve_enhanced.py  retrieve_hybrid.py  synthesize.py
examples/real_world/: README.md
examples/security/: README.md  classified_api_simple_demo.py  classified_security_demo.py  privacy_demo.py
maif/: __init__.py  acid_transactions.py  acid_truly_optimized.py  adaptation_rules.py  advanced_security.py  agentic_framework.py  batch_processor.py  binary_format.py  block_storage.py  block_types.py  classified_api.py  classified_security.py  cli.py  columnar_storage.py  compliance_logging.py  compliance_logging_enhanced.py  compression.py  compression_manager.py  config.py  convenience_api.py  core.py  cost_tracker.py  debug_tools.py  distributed.py  error_handling.py  event_sourcing.py  forensics.py  framework_adapters.py  health_check.py  hot_buffer.py  integration.py  integration_enhanced.py  lifecycle_management.py  lifecycle_management_enhanced.py  logging_config.py  metadata.py  metrics_aggregator.py  migration_tools.py  migration_utils.py  multi_agent.py  (+22 more)
maif/compliance/: __init__.py
maif/integration/: __init__.py
maif/integrations/: INTEGRATION_PLAN.md
maif/utils/: __init__.py
tests/: run_all_tests.py  test_audio_fix.py  test_benchmark.py  test_binary_format.py  test_block_type_validation.py  test_cli.py  test_compliance_logging.py  test_compression.py  test_core.py  test_encryption_changes.py  test_enhanced_features.py  test_fixes.py  test_fixes_quick.py  test_fixes_verification.py  test_forensics.py  test_integration.py  test_integration_fixed.py  test_metadata.py  test_novel_algorithms.py  test_privacy.py  test_pytorch_model_recovery.py  test_quality_validation.py  test_security.py  test_semantic.py  test_streaming.py  test_validation.py  test_video.py  test_working_functionality.py
tests/integrations/: test_crewai.py
tools/: create_sample_maif.py
tools/maif-dashboard/: README.md  dashboard.js  index.html  styles.css
tools/vscode-maif/: package-lock.json  package.json
(+26 files in other folders)
